--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -1,12 +1,12 @@
 /*************************** Theme Colours****************************/
 // Define theme colour scheme
-$theme-color-primary: #ffa522;
+$theme-color-primary: #144372;
 
-$theme-text-color-primary: #252930;
-$theme-text-color-secondary: lighten($theme-text-color-primary, 25%);
+$theme-text-color-primary: #144372;
+$theme-text-color-secondary: #144372;
 $theme-text-color-light: lighten($theme-text-color-primary, 40%);
 
-$theme-bg-light: #f4fcf6;
+$theme-bg-light: #f3f7fc;
 $theme-bg-dark: $theme-color-primary;
 $theme-bg-color: $theme-color-primary;
 
